Bug 430748: In print-selection, crop out selection regions that are before the top of the first page. (e.g. initial whitespace)  r+sr=roc a=beltzner